2013-02-20  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/cl-lib.el (cl-floatp-safe): Make it an alias for floatp.
	* emacs-lisp/cl-macs.el (cl--make-type-test)
	(cl--compiler-macro-assoc): Use floatp rather than cl-floatp-safe.

2013-02-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-cache.el (tramp-get-hash-table): New defun.
	(tramp-get-file-property, tramp-set-file-property)
	(tramp-get-connection-property, tramp-set-connection-property): Use it.
	(tramp-flush-file-property, tramp-flush-directory-property):
	Rename argument to KEY.
	(tramp-flush-connection-property): Simplify a little bit.
	(tramp-connection-property-p): New defun.
	(top): Reapply saved values only if there isn't a corresponding
	entry in `tramp-connection-properties'.

2013-02-19  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-indent-context):
	Fix python-info-line-ends-backslash-p call.
	(python-info-line-ends-backslash-p)
	(python-info-beginning-of-backslash): Respect line-number argument.
	(python-info-current-line-comment-p):
	Fix behavior when not at beginning-of-line.
	(python-util-position): Remove function.
	(python-util-goto-line): New function.

2013-02-19  Michael Albinus  <michael.albinus@gmx.de>

	* eshell/em-unix.el (eshell/su): Require tramp.
	(eshell/sudo): Require tramp.  Remove now unnecessary check.

	* net/tramp-sh.el (tramp-sh-handle-start-file-process): Let-bind
	`tramp-current-connection' in order to avoid an error when several
	commands are invoked in a short time in eshell and friends.

2013-02-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	Cleanup some of EIEIO's namespace.
	* emacs-lisp/eieio.el (eieio--define-field-accessors): New macro.
	Use it to define all the class-* and object-* field accessors (renamed
	to eieio--class-* and eieio--object-*).  Update all uses.
	(eieio--class-num-slots, eieio--object-num-slots): Rename from
	class-num-slots and object-num-slots.
	(eieio--check-type): New macro.